RESOLVED FIXED111440
Chromium DumpRenderTree dumps a core every time it's run (Linux/Debug)
https://bugs.webkit.org/show_bug.cgi?id=111440
Summary Chromium DumpRenderTree dumps a core every time it's run (Linux/Debug)
Tommy Widenflycht
Reported 2013-03-05 07:34:43 PST
Call stack: $ out/Debug/DumpRenderTree #EOF [29529:29529:2182963651329:FATAL:web_compositor_support_impl.cc(76)] Check failed: initialized_. [0x7ff9bada6e6e] base::debug::StackTrace::StackTrace() [0x7ff9bade5f8f] logging::LogMessage::~LogMessage() [0x7ff9bb191df3] webkit::WebCompositorSupportImpl::shutdown() [0x00000043f6cf] main [0x7ff9b039076d] __libc_start_main [0x00000043cc29] <unknown> Trace/breakpoint trap (core dumped)
Attachments
Patch (1.25 KB, patch)
2013-03-05 10:18 PST, James Robinson
enne: review+
Tommy Widenflycht
Comment 1 2013-03-05 08:39:44 PST
Is the call to WebKit::Platform::current()->compositorSupport()->shutdown(); in Tools/DumpRenderTree/chromium/DumpRenderTree.cpp:296 really necessary? Considering that WebKit::Platform::current()->compositorSupport()->initialize() has never been called?
James Robinson
Comment 2 2013-03-05 10:16:10 PST
Neither call are necessary - the assert is just too eager. Will fix.
James Robinson
Comment 3 2013-03-05 10:18:56 PST
Adrienne Walker
Comment 4 2013-03-05 10:20:12 PST
Comment on attachment 191511 [details] Patch R=me.
James Robinson
Comment 5 2013-03-05 10:20:41 PST
Note You need to log in before you can comment on or make changes to this bug.