Chromium DumpRenderTree dumps a core every time it's run (Linux/Debug) https://bugs.webkit.org/show_bug.cgi?id=111440

Reviewed by Adrienne Walker.

Remove unnecessary WebCompositorSupport::shutdown call

* DumpRenderTree/chromium/DumpRenderTree.cpp:
(main):

Canonical link: https://commits.webkit.org/129805@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144775 268f45cc-cd09-0410-ab3c-d52691b4dbfc